[package]
name = "nu_plugin_msgpack"
version = "0.90.1"
edition = "2021"
description = "Commands to convert nushell data to and from MsgPack"
repository = "https://github.com/hulthe/nu_plugin_msgpack/"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
brotli = "4.0.0"
chrono = "0.4.31"
nu-plugin = { version = "0.92.2", path = "../nushell/crates/nu-plugin" }
nu-protocol = { version = "0.92.2", path = "../nushell/crates/nu-protocol" }
rmpv = "1.0.1"
